# python_cmr

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  python-app.yml  python-publish.yml
cmr/: __init__.py  queries.py
pyCMR/: collections.py
pycmr/: collections.py
tests/: test_collection.py  test_granule.py  test_multiple_queries.py  test_queries.py  test_service.py  test_tool.py  test_variable.py
tests/fixtures/vcr_cassettes/: MOD09GA061_nohits.yaml  TELLUS_GRAC.yaml  TestCollectionClass.test_revision_date.yaml  TestGranuleClass.test_revision_date.yaml  TestGranuleClass.test_stac_output.yaml  TestMultipleQueries.test_get_all_less_than_2k.yaml  TestMultipleQueries.test_get_iter.yaml  TestMultipleQueries.test_get_iter_unparsed_format.yaml  TestMultipleQueries.test_get_unparsed_format.yaml  TestMultipleQueries.test_results.yaml  TestMultipleQueries.test_results_unparsed_format.yaml  TestMultipleQueries.test_zero_hits_query.yaml  TestMultipleQueries.test_zero_hits_query_iter.yaml  TestMultipleQueries.test_zero_hits_query_results.yaml  test_get_unparsed_format.yaml
